samples/_failures_safe/1761316643_363f91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21402c93.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_21402c93.c:131:5: error: expected declaration or statement at end of input
  131 |     printf("INFO: %d\n", severity_count[1]);
      |     ^~~~~~
